--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="top">
+<nav class="site_nav">
   <a href="/">Home</a> | 
   <a href="/about/">About Me</a> | 
   <a href="/learn-javascript.html">JavaScript</a> | 
