Fiddling with CSS still

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,11 +8,15 @@ section {
   margin-top: 0px;
 }
 
-div #title {
+div#title {
   margin: 0px;
   padding: 0px;
 }
 
-nav #site_nav {
+hr {
+  margin: 0px;
+}
+
+nav#site_nav {
   text-align: center;
 }
