--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,8 +4,8 @@
 @import "{{ site.theme }}";
 
 section {  
-  padding: 30px 0px 0px 0px;
   margin-top: 0px;
+  padding: 30px 0px 0px 0px;
 }
 
 div#title {
@@ -18,5 +18,6 @@ hr {
 }
 
 nav#site_nav {
+  padding-bottom: 10px;
   text-align: center;
 }
