--- a/404.scss
+++ b/404.scss
@@ -39,7 +39,7 @@ span {
   height: max-content;
   &:before{
     content:'';
-    background-image: url('../img/rm_404.png');
+    background-image: url("404.png");
     position: absolute;
     height: 100%;
     width: 100%;
