--- a/404.css
+++ b/404.css
@@ -42,10 +42,10 @@ span {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;    
-  animation: rotateIn 0.5s ease-out;  
+  animation: rotateIn 0.5s ease-out;
 }
 
- p {
+p {
   text-align: center;
   font-style: italic;
   font-weight: 400;
@@ -54,7 +54,7 @@ span {
   line-height: 22px;
  }
 
- button {
+button {
   background-color: #f96e4d;
   border: 0;
   padding: 11px 22px;
@@ -63,6 +63,26 @@ span {
   margin-top: 10px;
   cursor: pointer;
   font-weight: 900;
+}
+
+@keyframes spin { 
+  from {
+    transform: rotate( 0deg );
+  }  
+  to {
+    transform: rotate( -360deg );
+  }
+}
+
+@keyframes rotateIn {
+  from {
+    transform: rotate( 0deg ) scale(0.2);
+    opacity: 0;
+  }
+  to {
+    transform: rotate( 360deg ) scale(1);
+    opacity: 1;
+  }
 }
 
 .space {
