--- a/404.css
+++ b/404.css
@@ -27,6 +27,10 @@ html {
 }
 
 span {
+  &:first-letter{
+    letter-spacing: 12vmax; 
+  }
+  position: relative;
   color: #fff;
   font-weight: 900;
   font-size: 20.4em;
@@ -34,15 +38,17 @@ span {
   overflow: hidden;
   width: fit-content;
   height: max-content;
-  
-  background-image: url("404.png");
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;    
-  animation: rotateIn 2s ease-out;
+  &:before{
+    content:'';
+    background-image: url("404.png");
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;    
+    animation: rotateIn 2s ease-out;
+  }
 }
 
 p {
