Tweaking navigation for mobile

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
-<nav id="site_nav">
-  <a href="/">Home</a> | 
+<div id="site_nav">
+  [ <a href="/">Home</a> | 
   <a href="/about/">About Me</a> | 
   <a href="/learn-javascript.html">JavaScript</a> | 
-  <a href="/learn-php.html">PHP</a>
-</nav>
+  <a href="/learn-php.html">PHP</a> ]
+</div>
