--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,5 @@
-<div id="site_nav">
-  <a href="/">Home</a> | 
-  <a href="/about/">About Me</a> | 
-  <a href="/learn-javascript.html">JavaScript</a> | 
-  <a href="/learn-php.html">PHP</a>
-</div>
+<a href="/">Home</a> | 
+<a href="/about/">About Me</a> | 
+<a href="/posts/">Posts</a> | 
+<a href="/categories/">Categories</a>
+<a href="/tags/">Tags</a>
