--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <a href="/">Home</a> | 
 <a href="/about/">About Me</a> | 
 <a href="/posts/">Posts</a> | 
-<a href="/categories/">Categories</a>
+<a href="/categories/">Categories</a> |
 <a href="/tags/">Tags</a>
