--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
-<a href="/">Home</a> | 
-<a href="/about/">About Me</a> | 
-<a href="/posts/">Posts</a> | 
-<a href="/categories/">Categories</a> |
-<a href="/tags/">Tags</a>
+<a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>Home</a> | 
+<a href="/about/" {% if page.url == "/about/" %}style="color: red;"{% endif %}>About Me</a> | 
+<a href="/posts/" {% if page.url == "/posts`/" %}style="color: red;"{% endif %}>Posts</a> | 
+<a href="/categories/" {% if page.url == "/categories/" %}style="color: red;"{% endif %}>Categories</a> |
+<a href="/tags/" {% if page.url == "/tags/" %}style="color: red;"{% endif %}>Tags</a>
