--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,3 @@
-<a href="/" {% if page.url == "/" %}style="text-decoration: underline;"{% endif %}>Home</a> | 
-<a href="/about/" {% if page.url == "/about/" %}style="text-decoration: underline;"{% endif %}>About Me</a> | 
-<a href="/posts/" {% if page.url == "/posts/" %}style="text-decoration: underline;"{% endif %}>Posts</a> | 
-<a href="/categories/" {% if page.url == "/categories/" %}style="text-decoration: underline;"{% endif %}>Categories</a> |
-<a href="/tags/" {% if page.url == "/tags/" %}style="text-decoration: underline;"{% endif %}>Tags</a>
+{% for item in site.data.nav %}
+<a href="{{ item.link }}" {% if page.url == "/" %}style="text-decoration: underline;"{% endif %}>{{ item.name }}</a> {% if forloop.last == false %}|{% endif %}
+{% endfor $}
