--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
 {% for item in site.data.nav %}
-<a href="{{ item.link }}" {% if page.url == "/" %}style="text-decoration: underline;"{% endif %}>{{ item.name }}</a> {% if forloop.last == false %}|{% endif %}
+<a href="{{ item.link }}" {% if page.url == "{{ item.link }}" %}style="text-decoration: underline;"{% endif %}>{{ item.name }}</a> {% if forloop.last == false %}|{% endif %}
 {% endfor $}
