--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,11 @@
         <div id="site_nav">
 {% include nav.html %}
         </div>
-{{ content }}      
+{{ content }}
+{% include footer.html %}      
       </section>
     </div>
+    <script type="text/javascript" src="/assets/js/gistit_fix.js"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
