--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,6 @@
     ga('send', 'pageview');
   </script>
   {% endif %}
+
+  <script src="https://kit.fontawesome.com/ab6322a693.js" crossorigin="anonymous"></script>
 </head>
