More font awesome shenanigans

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,18 +30,13 @@
        </nav>
      
        <div class="sidebar-item">
-         <div id="social">
-           {% assign sm = site.data.social %}
-           {% for entry in site.data.social %}
-             {% assign key = entry | first %}
-             <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].title }}" rel="me"><i class="fa {{ sm[key].fa-icon }} fa-2x"></i></a>
-           {% endfor %}
-         </div>
-       </div>
-
-       <div class="sidebar-item">
          <p>
-           &copy; {{ site.time | date: '%Y' }}. All rights reserved.
-         </p>
+         {% assign sm = site.data.social %}
+         {% for entry in site.data.social %}
+           {% assign key = entry | first %}
+           <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].title }}" rel="me"><i class="fa {{ sm[key].fa-icon }} fa-2x"></i></a>
+         {% endfor %}
+        </p>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} - [License](https://github.com/fontora/fontora.dev/blob/master/LICENSE)</p>
        </div>
      </div>
