--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,6 +37,6 @@
            <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].title }}" rel="me"><i class="fa {{ sm[key].fa-icon }} fa-2x"></i></a>
          {% endfor %}
         </p>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} - [License](https://github.com/fontora/fontora.dev/blob/master/LICENSE)</p>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} <a href="https://github.com/fontora/fontora.dev/blob/master/LICENSE"><img src="https://img.shields.io/badge/license-MIT-blue"></a></p>
        </div>
      </div>
