--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            {% assign random = site.time | date: "%s" | modulo: site.data.quotes_sunny.size %}
+            {% assign random = site.time | date: "%s%N" | modulo: site.data.quotes_sunny.size %}
             &nbsp;&nbsp;&nbsp;<small>&ldquo;{{ site.data.quotes_sunny[random].quote }}&rdquo; &nbsp;&nbsp;- {{ site.data.quotes_sunny[random].character }}</small>           
             <!-- <small>{{ site.tagline }}</small> -->
           </h3>
