Adjusted overlay slide for sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,20 +2,13 @@
      styles, `#sidebar-checkbox` for behavior. -->
      <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 
-     <!-- Toggleable sidebar -->
      <div class="sidebar" id="sidebar">
        <div class="sidebar-item">
          <p>{{ site.description }}</p>
        </div>
      
        <nav class="sidebar-nav">
-         <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
-     
-         {% comment %}
-           The code below dynamically generates a sidebar nav of pages with
-           `layout: page` in the front-matter. See readme for usage.
-         {% endcomment %}
-     
+         <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>    
          {% assign pages_list = site.pages | sort:"url" %}
          {% for node in pages_list %}
            {% if node.title != null %}
@@ -24,9 +17,6 @@
              {% endif %}
            {% endif %}
          {% endfor %}
-     
-         <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-         <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
        </nav>
      
        <div class="sidebar-item">
@@ -38,6 +28,6 @@
          {% endfor %}
            <a href="https://github.com/fontora/fontora.dev/blob/master/LICENSE"><img src="https://img.shields.io/badge/license-MIT-blue" style="float:right;padding:5px"></a>
         </p>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</p>
+        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} v{{ site.version }}</p>
        </div>
      </div>
