--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -82,7 +82,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width: 56em) {
   .container {
-    max-width: 38rem;
+    /* Fontora 2023-05-03 */
+    max-width: 48rem;
   }
 }
 
