--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,5 +28,8 @@
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     <script src='{{ site.baseurl }}/public/js/script.js'></script>
+    <!-- https://jekyllcodex.org/without-plugin/lightbox/ -->
+    <script type="text/javascript" src="/js/lightbox.js"></script>
+    <link rel="stylesheet" href="/css/lightbox.css">
   </body>
 </html>
