--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
     <script src='{{ site.baseurl }}/public/js/script.js'></script>
     <!-- https://jekyllcodex.org/without-plugin/lightbox/ -->
-    <script type="text/javascript" src="/js/lightbox.js"></script>
-    <link rel="stylesheet" href="/css/lightbox.css">
+    <script type="text/javascript" src='{{ site.baseurl }}/public/js/lightbox.js'></script>
+    <link rel="stylesheet" href="{{ '/public/css/lightbox.css' | absolute_url }}">
   </body>
 </html>
