--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   {% include head.html %}
+  {% include google-analytics.html %}  
   <body class="sidebar-overlay">
     {% include sidebar.html %}
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
